# libsql_generate

./: CNAME  Cargo.toml  Dockerfile  README.md  app.py  fly.toml  generate.sh  get_sql.sh  index.html  wsgi.py
libsql-target/: input.rs
src/: lib.rs
