[package]
name = "libsql_generate"
version = "0.1.0"
edition = "2021"

[dependencies]
libsql_bindgen = "0"
byteorder = "1"
bytes = "1"
chrono = "0"
itertools = "0"
itoa = "1"
lz4_flex = "0"
magic-crypt = "3.1"
regex = "1"
serde = "1"
snap = "1"
syn = "1"
uuid = "1"

[lib]
crate-type = ["cdylib"]

[profile.release]
debug = false
lto = true
check-overflows = false
opt-level = "s"
